# zmq-subprocess

./: Cargo.toml
echo/echo-client/: Cargo.toml
echo/echo-client/src/: main.rs
echo/echo-lib/: Cargo.toml
echo/echo-lib/src/: lib.rs
src/: lib.rs
zmq-subprocess-client/: Cargo.toml
zmq-subprocess-client/src/: lib.rs
