[workspace]
members = [ "echo/echo-client", "echo/echo-lib","zmq-subprocess-client"]

[workspace.package]
version = "0.0.1"
edition = "2021"
publish = false

[workspace.dependencies]
libloading = "0.8.3"
thiserror = "1.0.58"
zmq = "0.10.0"

[package]
name = "zmq-subprocess"
version.workspace = true
edition.workspace = true

[dependencies]
